# seedgen

./: .coderabbit.yaml  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  docker-compose.yml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pr-check.yml  release.yml  test-matrix.yml
benches/: generate_bench.rs
examples/: sample-output.sql
scenarios/: blog.yaml  ecommerce.yaml  lifecycle-ecommerce.yaml  saas.yaml  social.yaml
src/: generate.rs  lib.rs  main.rs
src/cli/: commands.rs  generate.rs  introspect.rs  mod.rs  profile.rs  reset.rs
src/generators/: geo.rs  identifier.rs  mod.rs  network.rs  numeric.rs  structured.rs  temporal.rs  text.rs
src/introspection/: mod.rs  queries.rs  schema.rs
src/lifecycle/: churn.rs  config.rs  engine.rs  growth.rs  mod.rs  pool.rs  seasonality.rs  temporal.rs  timeline.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/output/: direct.rs  mod.rs  sql_file.rs
src/profile/: applicator.rs  audit.rs  collector.rs  compliance.rs  config.rs  errors.rs  mod.rs  offline.rs  output.rs  queries.rs  sensitive.rs  stats.rs
src/resolver/: cycles.rs  mod.rs  topological.rs
src/scenario/: mod.rs  parser.rs  templates.rs
src/semantic/: constraints.rs  mod.rs  rules.rs
tests/: lifecycle_snapshot.rs  profile_snapshot.rs  snapshot_tests.rs
tests/fixtures/: schema_basic.sql  schema_cyclic.sql  schema_lifecycle.sql  schema_with_check.sql
tests/integration/: introspect_test.rs  lifecycle_tests.rs  output_test.rs  profile_test.rs  property_tests.rs  resolve_test.rs
tests/snapshots/: lifecycle_snapshot__lifecycle_simulation_seed_42.snap  profile_snapshot__profile_basic_seed_42.snap  snapshot_tests__basic_seed_42.snap  snapshot_tests__basic_seed_7.snap
